Same flags for opera too.

--- a/app/lib/html/red-pill.html
+++ b/app/lib/html/red-pill.html
@@ -42,13 +42,13 @@
     <div class="compatibility-info">
         If this message does not disappear after a short moment:
         <h2>Your Browser may be incompatible</h2>
-        <p>You can either use a current version of FireFox or Chromium/Google Chrome.</p>
-        <p>In order to run Metapolator in <strong>Chrome</strong>
+        <p>You can either use a current version of FireFox or Chromium/Google Chrome/Opera.</p>
+        <p>In order to run Metapolator in <strong>Chrome</strong>, <strong>Opera</strong>,
         or <strong>Chromium</strong>
 
         <ol><li>Make sure that <a href="chrome://flags/#enable-javascript-harmony">chrome://flags/#enable-javascript-harmony</a>
         is <strong>disabled</strong> (it is by default).</li>
-        <li>Close all running instances of Chromium/Chrome.</li>
+        <li>Close all running instances of Chromium/Chrome/Opera.</li>
         <li>
         Then start it from the command-line like so:</p>
         <pre># if the command for your chrome-browser is "chrome"
@@ -59,6 +59,9 @@ $ chromium-browser --js-flags="--harmony --harmony_proxies"
 
 # and for chrome
 $ google-chrome-stable --js-flags="--harmony --harmony_proxies"
+
+# and for opera
+$ opera --js-flags="--harmony --harmony_proxies"
 </pre>
 </li></ol>
     </div>
