--- a/app/lib/html/stand-alone.html
+++ b/app/lib/html/stand-alone.html
@@ -120,8 +120,8 @@
     <div class="compatibility-info">
         If this message does not disappear after a short moment:
         <h2>Your Browser may be incompatible</h2>
-        <p>You can either use a current version of FireFox or Chromium/Google Chrome.</p>
-        <p>In order to run Metapolator in <strong>Chrome</strong>
+        <p>You can either use a current version of FireFox or Chromium/Google Chrome/Opera.</p>
+        <p>In order to run Metapolator in <strong>Chrome</strong>, <strong>Opera</strong>,
         or <strong>Chromium</strong>
 
         <ol><li>Make sure that <a href="chrome://flags/#enable-javascript-harmony">chrome://flags/#enable-javascript-harmony</a>
@@ -137,6 +137,9 @@ $ chromium-browser --js-flags="--harmony --harmony_proxies"
 
 # and for chrome
 $ google-chrome-stable --js-flags="--harmony --harmony_proxies"
+
+# and for opera
+$ opera --js-flags="--harmony --harmony_proxies"
 </pre>
 </li></ol>
     </div>
