Fix twitter button, add G+ button

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -110,17 +110,19 @@
                         <underconstruction>
                             <div class="bottom-text">
                                 Coming Soon:<br>Adjustment Masters<br><br>
-                                <!-- Facebook Share Button -->
+                                <!-- Facebook -->
                                 <div class="fb-share-button" data-href="https://metapolator.com/purple-pill/" data-layout="button_count"></div>
-                                <!-- Twitter Share Button -->
+                                <!-- Twitter -->
                                 <a class="twitter-share-button"
                                   href="https://twitter.com/share"
                                   data-url="https://metapolator.com/purple-pill/"
-                                  data-via="your_screen_name">
+                                  data-via="metapolator">
                                 Tweet
                                 </a>
+                                <!-- Pinterest -->
                                 <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark" ><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" /></a>
-                                <!-- End of Social Share Buttons -->
+                                <!-- G+ -->
+                                <div class="g-plusone" data-size="small"></div>
                             </div>
                         </underconstruction>
                     </div>
@@ -176,5 +178,7 @@
         <script>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));</script>
         <!-- Pinterest Social Sharing JS -->
         <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
+        <!-- G+ Social Sharing JS -->
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
     </BODY>
 </html>
