Fix G+ button size, move Pinterest first

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -110,6 +110,8 @@
                         <underconstruction>
                             <div class="bottom-text">
                                 Coming Soon:<br>Adjustment Masters<br><br>
+                                <!-- Pinterest -->
+                                <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark" ><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" /></a>
                                 <!-- Facebook -->
                                 <div class="fb-share-button" data-href="https://metapolator.com/purple-pill/" data-layout="button_count"></div>
                                 <!-- Twitter -->
@@ -119,10 +121,8 @@
                                   data-via="metapolator">
                                 Tweet
                                 </a>
-                                <!-- Pinterest -->
-                                <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark" ><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" /></a>
                                 <!-- G+ -->
-                                <div class="g-plusone" data-size="small"></div>
+                                <div class="g-plusone" data-size="medium"></div>
                             </div>
                         </underconstruction>
                     </div>
