--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -144,7 +144,7 @@
                     <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
-                                <form id="export-paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">Want to export OTF directly? <a title="Give financial support via Paypal" href="javascript:{}" onclick="document.getElementById('export-paypal').submit(); return false;">Donate</a> and we'll make it happen<input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="CMQZM2FJDP4VA"></form><br><br>
+                                <form id="export-paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">Want to export OTF directly?<br> <a title="Give financial support via Paypal" href="javascript:{}" onclick="document.getElementById('export-paypal').submit(); return false;">Donate</a> and we'll make it happen<input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="CMQZM2FJDP4VA"></form><br><br>
                                 Coming Soon:<br>Edit Metadata
                             </div>
                             <div id="export-progressbar"></div>
