--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -121,11 +121,15 @@
                 
                 <div id="panel-6" class="panel sub-panel" ng-style="{'width': 'calc(' + (data.view.panels[6] / data.view.totalPanelParts) + '* 100%)'}">
                     <div class="panel-border-without-menu">
-                        <underconstruction>
+                        <underconstruction id="fontfamily-panel">
                             <div class="bottom-text">
                                 Coming Soon:<br>Family Export
                             </div>
                         </underconstruction>
+                        <div id="progressbar-container">
+                            <div id="progressbar">&nbsp;</div>
+                            <div id="progresslabel"></div>
+                        </div>
                     </div>
                 </div>
             </div>
