Update /home logo

--- a/home/index.html
+++ b/home/index.html
@@ -38,7 +38,7 @@
 
     <body ng-app="Metapolator">
         <div id="menu">
-            <div id="logo"><img src="img/mp-logo.svg"></div>
+            <div id="logo"><img src="img/mp-logo.svg" style="width: 80px"></div>
             <div id="buttons">
                 <ul>
                     <li><a href="#introduction" data-scroll="introduction">Introduction</a></li>
