Home: Center top demo

--- a/home/index.html
+++ b/home/index.html
@@ -55,8 +55,8 @@
         
         <div id="pagewrap">
             <div id="subwrapper">
-        	    <section id="home-section" data-anchor="frontmatter" ng-controller="glyphController" style="padding-bottom: 0;">
-        	        <div id="glyphslider">
+        	    <section id="home-section" data-anchor="frontmatter" ng-controller="glyphController" style="padding-bottom: 0; text-align: center">
+        	        <div id="glyphslider"> 
         	            <!-- in './js/controllers/glyphController.js' -->
                         <div id="glyph" style="margin-top: 0; margin-bottom: 0;" title="Metorpolating logo">Metapolator</div>
                         <!-- in ./js/directives.js -->
