Home: Copy edit, s/sean/canola

--- a/home/index.html
+++ b/home/index.html
@@ -92,7 +92,7 @@
                         This uses the Hobby Spline to control a stroke, that is defined by points along a skeleton path.
                         Each stroke point has a left point and a right point set at an angle and a distance from that parent point.
                         The parent has a direction angle itself, and a tension value that defines the curvature of the stroke.
-                        Here is a simple interactive demonstration to play with drawing the Metapolator way:
+                        Here is a simple interactive demonstration to play with drawing, the Metapolator way:
                         <div id="pen-drawing-container">
                             <canvas class="float-element-1" id="pencanvas" width="400" height="400"></canvas>
                             <iframe class="float-element-2" width="400" height="400" src="https://www.youtube.com/embed/LlvO4n6vd-U" frameborder="0" allowfullscreen></iframe>
@@ -110,15 +110,16 @@
                         Fonts can be drawn with existing traditional font editors and loaded into Metapolator using the UFO format.
                         Metapolator can interpolate them in a typical way, with unlimited masters and axes.
                         <br><br>
-                        It can also import fonts that are drawn the Metapolator way, with glyphs drawn as separate and overlapping contours that mimic strokes with pairs of points along each edge. 
-                        Glyphs are often drawn this way already, as it helps when drawing shapes resembling strokes of pens.
-                        When imported, these original drawn outlines are converted into strokes.
+                        It can also import fonts that are drawn the Metapolator way, with glyphs drawn as separate and overlapping contours. 
+                        They mimic strokes with pairs of points along each edge. 
+                        Glyphs are often drawn this way already because it is a good way to draw shapes resembling strokes of pens.
+                        When imported, these drawn outlines are converted into real stroke objects.
                         <br><br>
                         <img src="img/Latin.svg"><br><br>
                         <br><br>
                         <b>New Fonts</b><br>
                         <a href="https://github.com/weiweihuanghuang/Work-Sans">Work Sans</a>, 
-                        <a href="https://github.com/metapolator/sean">Sean Sans</a> and 
+                        <a href="https://github.com/metapolator/canola">Canola</a> and 
                         <a href="https://github.com/metapolator/Breite">Breite</a> 
                         are being developed as the first font families with Metapolator in mind.
                         <br><br>
