--- a/home/index.html
+++ b/home/index.html
@@ -155,39 +155,44 @@
                     <div class="content">
                          <p>
                          The Metapolator project is a free, libre, open source project that is developed by a community of designers and developers. 
-                         It began in the March 2013 when Simon Egli (a graphic and type designer from Switzerland) and Dave Crossland (a software freedom activist working to free typography) met in New York City to discuss the <a href="http://metaflop.com" title="Metaflop">Metaflop</a> project that Simon was involved in. 
+                         It began in March 2013 when Simon Egli (a graphic and type designer from Switzerland) and Dave Crossland (a software freedom activist working to free typography) met in New York City to discuss the <a href="http://metaflop.com" title="Metaflop">Metaflop</a> project that Simon was contributing to. 
                          Metaflop is web-based graphical user interface to the <a href="http://en.wikipedia.org/wiki/Metafont" title="Metafont">Metafont</a> parametric font programming language, allowing non-programmers to adjust the parameters of a metafont intuitively. 
                          </p>
                          <p>
-                         Simon proposed that the Bezier contours typically drawn by type designers, and stored in the <a href="http://unifiedfontobject.org/versions/ufo2/glif.html">UFO GLIF</a> XML format, could be converted into a Metafont <i>stroke</i> element, if they simply have an even number of points. 
+                         Simon had realised that the Bezier contours typically drawn by type designers, and stored in the <a href="http://unifiedfontobject.org/versions/ufo2/glif.html">UFO GLIF</a> XML format, could be converted into a Metafont <i>stroke</i> element, if they simply have an even number of points. 
                          Dave wondered if this could become a powerful new way to develop typeface families. 
-                         It would combine the parametric power of Metafont with a graphical interface to glyph drawing, and overcome the inherent limitation of inputting text for outputting graphics that has prevented Metafont from being truly useful for type designers.
+                         It would combine the parametric power of Metafont with a graphical interface to glyph drawing.
+                         This could overcome the inherent limitation of inputting text for outputting graphics, which has prevented Metafont from being truly useful for type designers.
                          </p>
                          <p>
-                         Simon returned home to Switzerland and founded the Metapolator project to pursue this dream. 
+                         Simon returned home to Switzerland and founded the Metapolator project to pursue this vision. 
                          He began a PHP codebase and posted some <a href="http://metapolator.tumblr.com/" title="Metapolator prototypes">experimental results on Tumblr</a>. 
-                         Dave and Simon attended the <a href="http://libregraphicsmeeting.org/2013">Libre Graphics Meeting 2013</a> in Madrid in April, and met again in Switzerland to begin a new prototype, <a href="https://github.com/metapolator/mfg-2013">mfg</a>.
-                         This used a Python web server to connect <a href="http://robofab.com/">Robofab</a>, <a href="http://en.wikipedia.org/wiki/MetaPost">Metapost</a>, <a href="http://www.ctan.org/pkg/mf2pt1">mf2pt1</a>, <a href="http://fontforge.github.io">FontForge</a>, and <a href="http://paperjs.org/">paper.js</a>.
+                         Dave and Simon attended the <a href="http://libregraphicsmeeting.org/2013">Libre Graphics Meeting 2013</a> in Madrid in April to begin a new prototype, <a href="https://github.com/metapolator/mfg-2013">mfg</a>.
+                         This used a Python web server to connect <a href="http://robofab.com/">Robofab</a>, <a href="http://en.wikipedia.org/wiki/MetaPost">Metapost</a>, <a href="http://www.ctan.org/pkg/mf2pt1">mf2pt1</a> and <a href="http://fontforge.github.io">FontForge</a> to a web UI that used <a href="http://paperjs.org/">paper.js</a>.
                          Over the following year, the project grew to include new contributors, including Vitaly Volkhov (a Python developer in Ukraine) Wei Huang (a graphic and type designer in Norway) and Nicolas Pauly (a graphic and type designer in Lyon.) 
-                         With a working prototype in hand, Google Fonts project commissioned Simon to develop a new Sans Serif family, Sean Sans.
+                         With a working prototype in hand, Simon began work on a new Sans Serif family, codenamed Sean Sans.
                          </p>
                          <p>
                          In April 2014 Simon presented this prototype at the <a href="http://www.metapolator.com/pre.html" title="Metapolator at Libre Graphics Meeting 2014">Libre Graphics Meeting 2014</a> in Leipzig, which was attended by Lasse Fister (a designer-developer in Nuremburg) and Peter Sikking (a user experience architect in Berlin.)
-                         Lasse had developed the <a href="http://lib.ufojs.org/" title="ufo.js">ufo.js</a> library, for working with UFO fonts entirely in the browser.
-                         He proposed an entirely new approach to Metapolator that would leverage his ufo.js and a native JavaScript implementation of the Hobby Spline to completely move away from Metafont itself.
+                         Lasse had developed <a href="http://lib.ufojs.org/" title="ufoJS">ufoJS</a>, a JavaScript library for working with UFO fonts entirely in the browser.
+                         He proposed a new approach to Metapolator that would leverage his ufoJS and a native JavaScript implementation of the Hobby Spline to completely replace Metafont itself.
                          In its place, Lasse proposed <a href="https://github.com/metapolator/metapolator/wiki/cascading-properties-sheets" title="Cascading Properties Sheets">Cascading Properties Sheets</a>, which uses the familiar syntax of CSS to describe font properties and parametric formula.
-                         At the same time Peter proposed a completely new graphical interface that would be designed from the ground up using his User Experience Architecture process.
+                         At the same time Peter proposed a completely new user interface, designed from the ground up with his User Experience Architecture process.
                          </p>
                          <p>
-                         The Google Fonts project commissioned font families from Simon, Wei, Nicolas and Lasse, and gave financial support to Peter as well as Reuben Thomas and Ben Martin, software developers who had contributed to FontForge and assisted the software development led by Lasse. 
-                         These core developers of the &#8220;Neue Metapolator&#8221; met at the <a href="http://web.archive.org/web/20140723144305/http://automatic-type-design.anrt-nancy.fr/index_en.php">automatic type design</a> conference at the Atelier National de Recherche Typographique in May in Nancy, France.</p>
+                         Dave consults for the Google Fonts team, and arranged some limited financial support for the project. 
+                         Simon, Wei and Nicolas began developing new font families, and Peter began the design of the new Metapolator application.
+                         Lasse led the development of the core CPS technology engine, with assistance from Reuben Thomas and Ben Martin, software developers who had contributed to FontForge.
+                         The team met at the <a href="http://web.archive.org/web/20140723144305/http://automatic-type-design.anrt-nancy.fr/index_en.php">automatic type design</a> conference at the Atelier National de Recherche Typographique in May in Nancy, France.
+                         </p>
                          <p>                      
-                         Development continued over the summer of 2013, posting work in progress and discussions on the <a href="https://plus.google.com/communities/110027004108709154749" title="Metapolator G+ community">Metapolator community on Google Plus</a>.
-                         The community grew to include contributions from Coen van der Kamp and Jeroen Breen on the front-end development of the UI that Peter designs.
-                         Lasse is developing the core CPS engine, Simon continues to develop the Sean family, and Jeroen is implementing the UI in close collaboration with Peter.
+                         Development continued over the summer, posting work in progress and discussions on the <a href="https://plus.google.com/communities/110027004108709154749" title="Metapolator G+ community">Metapolator community on Google Plus</a>.
+                         The community grew to include contributions from Jeroen Breen, Coen van der Kamp and Felipe Sanches who implemented a working demo of the UI in close collaboration with Peter.
+                         This was presented at the <a href="http://libregraphicsmeeting.org">Libre Graphics Meeting 2015</a> in Toronto in April 2015.
                          </p>
                          <p>
-                         We will present the latest prototype at the <a href="http://libregraphicsmeeting.org">Libre Graphics Meeting 2015</a>.
+                         The future of Metapolator will be to continue implementing the designed application as an open web tool for the next generation of typeface design.
+                         We hope you'll join us.
                          </p>
                          <br><br>
                         
@@ -197,14 +202,14 @@
     
                 <section data-anchor="social" class="red">
                     <a name="social"></a>
-                    <h1>Follow us!</h1>
+                    <h1>Join us!</h1>
                     <div class="bullets"></div>
                     <div class="content">
                          <div class="content-center content-follow">
                              <img src="img/google-plus.png" width="48"><br>
-                             Follow the project on <a href="https://plus.google.com/communities/110027004108709154749" target="_blank">Google Plus</a><br><br>                         
+                             <a href="https://plus.google.com/communities/110027004108709154749" target="_blank">Join our Google+ Community</a><br><br>                         
                              <img src="img/github.svg" width="48"><br>
-                             Contribute at <a href="https://github.com/metapolator/" target="_blank">Github</a>
+                             <a href="https://github.com/metapolator/metapolator" target="_blank">Watch our Github Project</a>
                         </div>
                     </div>
                     <div class="bullets"></div>
