Home: Link to live demos

--- a/home/index.html
+++ b/home/index.html
@@ -44,7 +44,7 @@
                     <li><a href="#productvision" data-scroll="productvision">Product Vision</a></li>
                     <li><a href="#strokes" data-scroll="strokes">The Stroke</a></li>
                     <li><a href="#fonts" data-scroll="fonts">Our Fonts</a></li>
-                    <li><a href="#demos" data-scroll="demos">Live Prototypes</a></li>
+                    <li><a href="#demos" data-scroll="demos">Live Demos</a></li>
                     <li><a href="#history" data-scroll="history">Project History</a></li>
                     <li><a href="#social" data-scroll="social">Social Media</a></li>
                 </ul>
@@ -128,22 +128,12 @@
         
                 <section data-anchor="demos" class="red">
                     <a name="demos"></a>
-                    <h1>Technology Preview</h1>
+                    <h1>Live Demos</h1>
                     <div class="bullets"></div>
                     <div class="content" id="blue-pill-content">
-                        <a href="http://metapolator.com/slider/" target="_blank">Open full user interface</a> (in a new window)
+                        <a href="http://metapolator.com/purple-pill/" target="_blank" style="cursor: alias">Open application demo in a new window</a>
                         <br><br>
-                        <a href="http://metapolator.com/red-pill-demo" target="_blank">Open developer interface</a> (in a new window)
-                        <br><br>
-                        You can explore and control a design space:<br><br><br>
-                        <div class="bluepill-left">
-                            <masters ng-controller="mastersController" ng-mouseup="mouseclick = false"></masters>
-                        </div>
-                        <div class="bluepill-right">
-                            <designspace ng-controller="designspaceController"></designspace>
-                        </div>
-                        <br><br>
-                        <br><br>
+                        <a href="http://metapolator.com/red-pill-demo" target="_blank" style="cursor: alias">Open technology demo in a new window</a>
                     </div>
                     <div class="bullets"></div>
                 </section>  
