Home: Copy edit

--- a/home/index.html
+++ b/home/index.html
@@ -120,7 +120,8 @@
                         <a href="https://github.com/weiweihuanghuang/Work-Sans">Work Sans</a>, 
                         <a href="https://github.com/metapolator/canola">Canola</a> and 
                         <a href="https://github.com/metapolator/Breite">Breite</a> 
-                        are being developed as the first font families with Metapolator in mind.
+                        are being developed as the first font families with Metapolator in mind. 
+                        Here's a sketch of some of the work in progress:
                         <br><br>
                         <img src="img/Font.svg">
                     </div>
