--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -123,6 +123,12 @@
                                 </a>
                                 <!-- G+ -->
                                 <div class="g-plusone" data-size="medium"></div>
+                                <div style="display:inline">
+                                <!-- Github Star -->
+                                <iframe src="https://ghbtns.com/github-btn.html?user=metapolator&repo=metapolator&type=star&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+                                <!-- Github Watch -->
+                                <iframe src="https://ghbtns.com/github-btn.html?user=metapolator&repo=metapolator&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+                                </div>
                             </div>
                         </underconstruction>
                     </div>
