Display a download link when the export zip is ready. Allow the user to click that link to trigger an immediate Save As action. (issue #522)

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -157,6 +157,7 @@
                         <div id="progressbar-container">
                             <div id="progressbar">&nbsp;</div>
                             <div id="progresslabel">&nbsp;</div>
+                            <div id="blob_download" style="display:none">Export Complete:&nbsp;<a href="#"></a></div>
                         </div>
                     </div>
                 </div>
