--- a/home/index.html
+++ b/home/index.html
@@ -1,9 +1,47 @@
 <!doctype html>
 <html lang="en">
     <head>
-                <meta charset="UTF-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Metapolator</title>
+        <meta name="description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time.">
+
+        <meta property="og:title" content="Metapolator – Free Font Editor for Designing Typeface Families" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
+        <meta property="og:url" content="http://metapolator.com/home" />
+        <meta property="og:image" content="http://metapolator.com/home/favicon/metapolator.png" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@metapolator">
+        <meta name="twitter:creator" content="@metapolator">
+        <meta name="twitter:title" content="Metapolator – Free Font Editor for Designing Typeface Families">
+        <meta name="twitter:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
+        <meta name="twitter:image" content="http://metapolator.com/home/favicon/metapolator.png">
+        <meta name="twitter:url" content="http://metapolator.com/home" />
+
+        <!-- Favicons -->
+        <link rel="icon" href="/home/favicon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/home/favicon/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/home/favicon/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/home/favicon/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/home/favicon/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/home/favicon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/home/favicon/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/home/favicon/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/home/favicon/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/home/favicon/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/home/favicon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/home/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/home/favicon/mstile-144x144.png">
+        <meta name="theme-color" content="#ffffff">
 
         <!-- jQuery -->
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
@@ -132,7 +170,7 @@
                     <h1>Live Demos</h1>
                     <div class="bullets"></div>
                     <div class="content" id="blue-pill-content">
-                        <a href="http://metapolator.com/purple-pill/" target="_blank" style="cursor: alias">Open application demo in a new window</a>
+                        <a href="http://metapolator.com/home/" target="_blank" style="cursor: alias">Open application demo in a new window</a>
                         <br><br>
                         <a href="http://metapolator.com/red-pill-demo" target="_blank" style="cursor: alias">Open technology demo in a new window</a>
                     </div>
@@ -212,9 +250,9 @@
 
         <!-- paperjs -->
         <script type="text/javascript" src="js/paper-full.min.js"></script>
-        <script type="text/paperscript" src="js/pendrawing.js" canvas="pencanvas">
+        <script type="text/paperscript" src="js/pendrawing.js" canvas="pencanvas"></script>
             
-        <!-- old website -->            
+        <!-- old website -->
         <script type="text/javascript" src="app/js/paper-full.js"></script>
         <script type="text/javascript" src="app/js/instance.js"></script>
         <script type="text/javascript" src="app/js/opentype.js"></script>
