--- a/home/index.html
+++ b/home/index.html
@@ -170,7 +170,7 @@
                     <h1>Live Demos</h1>
                     <div class="bullets"></div>
                     <div class="content" id="blue-pill-content">
-                        <a href="http://metapolator.com/home/" target="_blank" style="cursor: alias">Open application demo in a new window</a>
+                        <a href="http://metapolator.com/purple-pill" target="_blank" style="cursor: alias">Open application demo in a new window</a>
                         <br><br>
                         <a href="http://metapolator.com/red-pill-demo" target="_blank" style="cursor: alias">Open technology demo in a new window</a>
                     </div>
