--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -92,7 +92,7 @@
                 </div>
                 
                 
-                <specimen id="panel-1" ng-controller="specimenController" ng-init="addGlyphRange(); specimenPanel = 1" class="sub-panel panel" ng-style="{'width': 'calc(' + (data.view.panels[1] / data.view.totalPanelParts) + '* 100%)'}"></specimen>
+                <specimen id="panel-1" ng-controller="specimenController" ng-init="addGlyphRange(); specimenPanel = 1; loadMapping();" class="sub-panel panel" ng-style="{'width': 'calc(' + (data.view.panels[1] / data.view.totalPanelParts) + '* 100%)'}"></specimen>
 
                 <!-- start of view 2 -->
                 <div id="panel-2" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[2] / data.view.totalPanelParts) + '* 100%)'}">
