--- a/home/index.html
+++ b/home/index.html
@@ -170,7 +170,10 @@
                     <h1>Live Demos</h1>
                     <div class="bullets"></div>
                     <div class="content" id="blue-pill-content">
-                        <a href="http://metapolator.com/purple-pill" target="_blank" style="cursor: alias">Open application demo in a new window</a>
+                        <a href="http://metapolator.com/purple-pill/" target="_blank" style="cursor: alias">Open application demo in a new window</a><br><br>
+                        <a href="http://metapolator.com/purple-pill/" target="_blank" style="cursor: alias"><img src="img/screenshot-020-a.png" width="100%" /></a><br>
+                        <a href="http://metapolator.com/purple-pill/" target="_blank" style="cursor: alias"><img src="img/screenshot-020-b.png" width="100%" /></a><br>
+                        <a href="http://metapolator.com/purple-pill/" target="_blank" style="cursor: alias"><img src="img/screenshot-020-c.png" width="100%" /></a><br>
                         <br><br>
                         <a href="http://metapolator.com/red-pill-demo" target="_blank" style="cursor: alias">Open technology demo in a new window</a>
                     </div>
