Add spreadsheet t shirt links

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -93,7 +93,7 @@
                         <underconstruction>
                             <div class="bottom-text">
                                 Coming Soon:<br>More Parameters<br><br>
-                                Want more parameters, including point parameters for fine-tuning? Support the project and <a title="Support the project with a T shirt" href="http://teespring.com/metapolator-beta-0-3-0" target="_blank" class="newtab">buy a t-shirt</a>
+                                Want more parameters, including point parameters for fine-tuning? Support the project and buy a T shirt (<a title="Support the project and buy a T shirt (USA)" href="http://teespring.com/metapolator-beta-0-3-0" target="_blank" class="newtab">USA</a>, <a title="Support the project and buy a T shirt (Worldwide)" href="http://metapolator.spreadshirt.com" target="_blank" class="newtab">Worldwide</a>)
                             </div>
                         </underconstruction>
                     </div>
