#353 set the limits (180 and 270) of the panels at start

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -86,7 +86,7 @@
 
         <div id="pagewrap" class="unselectable">
             <div id="landscape" ng-style="{'width': 'calc(' + (data.view.totalPanelParts / 16) + '* 100%)', 'left': data.getLandscapeLeft()}" class="transition">
-                <div id="panel-0" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[0] / data.view.totalPanelParts) + '* 100%)'}">
+                <div id="panel-0" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[0].share / data.view.totalPanelParts) + '* 100%)'}">
                     <parameters ng-controller="parametersController" class="sub-panel semi-panel"></parameters>
                     <dividerHor style="top: 50%"></dividerHor>
                     <div class="sub-panel semi-panel">
@@ -98,10 +98,10 @@
                         </underconstruction>
                     </div>
                 </div>
-                <specimen id="panel-1" ng-controller="specimenController" ng-init="addGlyphRange(); specimenPanel = 1; loadMapping();" class="sub-panel panel" ng-style="{'width': 'calc(' + (data.view.panels[1] / data.view.totalPanelParts) + '* 100%)'}"></specimen>
+                <specimen id="panel-1" ng-controller="specimenController" ng-init="addGlyphRange(); specimenPanel = 1; loadMapping();" class="sub-panel panel" ng-style="{'width': 'calc(' + (data.view.panels[1].share / data.view.totalPanelParts) + '* 100%)'}"></specimen>
 
                 <!-- start of view 2 -->
-                <div id="panel-2" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[2] / data.view.totalPanelParts) + '* 100%)'}">
+                <div id="panel-2" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[2].share / data.view.totalPanelParts) + '* 100%)'}">
                     <masters ng-controller="mastersController" class="list sub-panel semi-panel" type="master"></masters>
                     <dividerHor style="top: 50%"></dividerHor>
                     <div class="sub-panel semi-panel">
@@ -132,19 +132,19 @@
                     </div>
                 </div>
 
-                <div id="panel-3" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[3] / data.view.totalPanelParts) + '* 100%)'}">
+                <div id="panel-3" class="panel" ng-style="{'width': 'calc(' + (data.view.panels[3].share / data.view.totalPanelParts) + '* 100%)'}">
                     <designspace ng-controller="designspaceController" class="sub-panel semi-panel"></designspace>
                     <dividerHor style="top: 50%"></dividerHor>
                     <specimen2 ng-controller="specimenController" class="sub-panel semi-panel" ng-init="specimenPanel = 2"></specimen2>
                 </div>
 
                 <!-- start of view 3 -->
-                <instances id="panel-4" ng-controller="instancesController" class="list panel sub-panel" type="instance" ng-style="{'width': 'calc(' + (data.view.panels[4] / data.view.totalPanelParts) + '* 100%)'}"></instances>
+                <instances id="panel-4" ng-controller="instancesController" class="list panel sub-panel" type="instance" ng-style="{'width': 'calc(' + (data.view.panels[4].share / data.view.totalPanelParts) + '* 100%)'}"></instances>
                 
-                <fontexport id="panel-5" class="panel sub-panel standard-padding" ng-controller="fontexportController" ng-style="{'width': 'calc(' + (data.view.panels[5] / data.view.totalPanelParts) + '* 100%)'}">
+                <fontexport id="panel-5" class="panel sub-panel standard-padding" ng-controller="fontexportController" ng-style="{'width': 'calc(' + (data.view.panels[5].share / data.view.totalPanelParts) + '* 100%)'}">
                 </fontexport>
                 
-                <div id="panel-6" class="panel sub-panel" ng-style="{'width': 'calc(' + (data.view.panels[6] / data.view.totalPanelParts) + '* 100%)'}">
+                <div id="panel-6" class="panel sub-panel" ng-style="{'width': 'calc(' + (data.view.panels[6].share / data.view.totalPanelParts) + '* 100%)'}">
                     <div class="panel-border-without-menu">
                         <underconstruction id="fontfamily-panel">
                             <div class="bottom-text">
