--- a/v0.3.0/index2.html
+++ b/v0.3.0/index2.html
@@ -144,9 +144,9 @@
             <div id="dialog-close" ng-click="data.closeDialog()">×</div>
             <div id="dialog-loading"><img src="img/loading.gif"></div>
             <div id="dialog-content"></div>
-            <div id="dialog-buttons">
-                <button id="dialog-button">OK</button>
-                <button id="dialog-button">CANCEL</button>
+            <div id="dialog-confirm">
+                <button id="dialog-button-true" ng-click="">OK</button>
+                <button id="dialog-button-false">CANCEL</button>
             </div>
         </div>
         
