Renamed and moved html page
Updated involved links

--- a/app/lib/html/metapolator.html
+++ b/app/lib/html/metapolator.html
@@ -12,7 +12,7 @@
         <!-- less
 
         for development only and will disappear in production -->
-        <link rel="stylesheet/less" type="text/css" href="lib/ui/metapolator/app.less" />
+        <link rel="stylesheet/less" type="text/css" href="../ui/metapolator/app.less" />
 
         <script>
             less = {
@@ -25,10 +25,10 @@
                 relativeUrls : false,
             };
         </script>
-        <script src="lib/bower_components/less.js/dist/less-1.7.0.min.js"></script>
+        <script src="../bower_components/less.js/dist/less-1.7.0.min.js"></script>
         <!-- end of less -->
 
-        <script src="lib/bower_components/requirejs/require.js" data-main="lib/metapolatorMain.js"></script>
+        <script src="../bower_components/requirejs/require.js" data-main="../metapolatorMain.js"></script>
     </head>
     <body>
         <metapolator class="unselectable"></metapolator>
