Make use of central requirejs config
Included jquery, d3, jquery-ui and sortable in config file.
Also edited deps for angular, and sortable, so it loads in the right
order. For sortable to work, jquery needs to loaded before angular.

--- a/app/lib/html/metapolator.html
+++ b/app/lib/html/metapolator.html
@@ -25,10 +25,17 @@
                 relativeUrls : false,
             };
         </script>
+
+            
         <script src="../bower_components/less.js/dist/less-1.7.0.min.js"></script>
         <!-- end of less -->
 
-        <script src="../bower_components/requirejs/require.js" data-main="../metapolatorMain.js"></script>
+        <script src="../bower_components/requirejs/require.js"></script>
+        <script>
+        require(['../browserConfig.js'], function(){
+            require(['../metapolatorMain.js']);
+        });
+        </script>
     </head>
     <body>
         <metapolator class="unselectable"></metapolator>
