--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -149,7 +149,7 @@
                         <underconstruction id="fontfamily-panel">
                             <div class="bottom-text">
                                 <form id="export-paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">Want new features?<br> <a title="Give financial support via Paypal" href="javascript:{}" onclick="document.getElementById('export-paypal').submit(); return false;">Donate</a> and we'll make it happen<input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="CMQZM2FJDP4VA"></form><br><br>
-                                Coming Soon:<br>Edit Metadata, Export OTF
+                                Coming Soon:<br>Edit Metadata
                             </div>
                         </underconstruction>
                         <div id="progressbar-container">
