--- a/app/lib/html/metapolator.html
+++ b/app/lib/html/metapolator.html
@@ -12,7 +12,7 @@
         <!-- less
 
         for development only and will disappear in production -->
-        <link rel="stylesheet/less" type="text/css" href="../ui/metapolator/app.less" />
+        <link rel="stylesheet/less" type="text/css" href="lib/ui/metapolator/app.less" />
 
         <script>
             less = {
@@ -26,14 +26,14 @@
             };
         </script>
 
-            
-        <script src="../bower_components/less.js/dist/less-1.7.0.min.js"></script>
+
+        <script src="lib/bower_components/less.js/dist/less-1.7.0.min.js"></script>
         <!-- end of less -->
 
-        <script src="../bower_components/requirejs/require.js"></script>
+        <script src="lib/bower_components/requirejs/require.js"></script>
         <script>
-        require(['../browserConfig.js'], function(){
-            require(['../metapolatorMain.js']);
+        require(['lib/browserConfig.js'], function(){
+            require(['lib/metapolatorMain.js']);
         });
         </script>
     </head>
