flexbox layout with resizable cps-panel at the bottom

--- a/app/lib/html/red-pill.html
+++ b/app/lib/html/red-pill.html
@@ -37,9 +37,9 @@
     <!-- end of production -->
   </head>
   <body>
-    <h1>Metapolator Neue</h1>
-    <h3>The Red Pill Interface</h3>
     <div class="compatibility-info">
+        <h1>Metapolator</h1>
+        <h3>Compatibility Information</h3>
         If this message does not disappear after a short moment:
         <h2>Your Browser may be incompatible</h2>
         <p>You can either use a current version of FireFox or Chromium/Google Chrome/Opera.</p>
