--- a/home/index.html
+++ b/home/index.html
@@ -212,18 +212,17 @@
                          At the same time Peter proposed a completely new user interface, designed from the ground up with his User Experience Architecture process.
                          </p>
                          <p>
-                         Dave consults for the Google Fonts team, and arranged some limited financial support for the project. 
                          Simon, Wei and Nicolas began developing new font families, and Peter began the design of the new Metapolator application.
                          Lasse led the development of the core CPS technology engine, with assistance from Reuben Thomas and Ben Martin, software developers who had contributed to FontForge.
                          The team met at the <a href="http://web.archive.org/web/20140723144305/http://automatic-type-design.anrt-nancy.fr/index_en.php">automatic type design</a> conference at the Atelier National de Recherche Typographique in May in Nancy, France.
                          </p>
                          <p>                      
                          Development continued over the summer, posting work in progress and discussions on the <a href="https://plus.google.com/communities/110027004108709154749" title="Metapolator G+ community">Metapolator community on Google Plus</a>.
-                         The community grew to include contributions from Jeroen Breen, Coen van der Kamp and Felipe Sanches who implemented a working demo of the UI in close collaboration with Peter.
+                         The community grew to include contributions from Jeroen Breen, Coen van der Kamp and Felipe Sanches who implemented a working prototype of the UI in close collaboration with Peter.
                          This was presented at the <a href="http://libregraphicsmeeting.org">Libre Graphics Meeting 2015</a> in Toronto in April 2015.
                          </p>
                          <p>
-                         The future of Metapolator will be to continue implementing the designed application as an open web tool for the next generation of typeface design.
+                         The future of Metapolator is to continue implementing what has been designed, to set the trend for the next generation of typeface design.
                          We hope you'll join us.
                          </p>
                          <br><br>
