--- a/mvp/index.html
+++ b/mvp/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Metapolator</title>
+        <title>Metapolator MVP</title>
         <!-- development
         <link rel="stylesheet/less" type="text/css" href="lib/ui/metapolator/app.less" />
 
