--- a/home/index.html
+++ b/home/index.html
@@ -23,11 +23,11 @@
         <meta name="twitter:url" content="http://metapolator.com/home" />
 
         <!-- Favicons -->
-        <link rel="icon" href="/home/favicon/favicon.ico">
-        <link rel="icon" type="image/png" href="/home/favicon/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/home/favicon/favicon-194x194.png" sizes="194x194">
-        <link rel="icon" type="image/png" href="/home/favicon/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/home/favicon/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" href="/home/favicon/favicon.ico?v=2">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-32x32.png?v=2" sizes="32x32">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-194x194.png?v=2" sizes="194x194">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-96x96.png?v=2" sizes="96x96">
+        <link rel="icon" type="image/png" href="/home/favicon/favicon-16x16.png?v=2" sizes="16x16">
 
         <!-- jQuery -->
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
