--- a/v0.3.0/max/index.html
+++ b/v0.3.0/max/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="">
 
         <title>Metapolator</title>
+        <link rel="icon" href="lib/ui/metapolator/assets/favicon/favicon.ico">
         <!-- development
         <link rel="stylesheet/less" type="text/css" href="lib/ui/metapolator/app.less" />
 
