--- a/app/lib/html/metapolator.html
+++ b/app/lib/html/metapolator.html
@@ -38,5 +38,19 @@
     </head>
     <body>
         <metapolator class="unselectable"></metapolator>
+
+        <div id="splashscreen">
+            <div id="splash-left">
+                <img id="splash-logo" src="lib/ui/metapolator/assets/img/metapolator-logo.svg">
+            </div>
+            <div id="splash-right">
+                <h1>Metapolator</h1>
+                <h2>For Designing Fonts and Families Faster</em></h2>
+                <p>Firefox users will see this dialog disappear in a moment,<br />
+                    and if you see a <em>Warning: Unresponsive script</em> error<br />
+                    then tick the box and click <em>Continue</em>.</p>
+                <p>Not using Firefox? <a href="https://github.com/metapolator/metapolator/wiki/Getting-Started">Learn more…</a></p>
+            </div>
+        </div>
     </body>
 </html>
