added social media stuff and meta tags

--- a/app/lib/html/metapolator.html
+++ b/app/lib/html/metapolator.html
@@ -3,12 +3,48 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Metapolator</title>
-        <link rel="icon" href="lib/ui/metapolator/assets/favicon/favicon.ico">
+        <title>Metapolator – Free Font Editor for Designing Typeface Families</title>
+        <meta name="description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time.">
+
+        <meta property="og:title" content="Metapolator – Free Font Editor for Designing Typeface Families" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
+        <meta property="og:url" content="http://metapolator.com/v0.3.0/max" />
+        <meta property="og:image" content="lib/ui/metapolator/assets/img/metapolator.png" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@metapolator">
+        <meta name="twitter:creator" content="@metapolator">
+        <meta name="twitter:title" content="Metapolator – Free Font Editor for Designing Typeface Families">
+        <meta name="twitter:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
+        <meta name="twitter:image" content="lib/ui/metapolator/assets/img/metapolator.png">
+        <meta name="twitter:url" content="http://metapolator.com/v0.3.0/max" />
+
+        <!-- Favicons -->
+        <link rel="icon" href="lib/ui/metapolator/assets/img/favicon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="lib/ui/metapolator/assets/img/favicon/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="lib/ui/metapolator/assets/img/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="lib/ui/metapolator/assets/img/favicon/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="lib/ui/metapolator/assets/img/favicon/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="lib/ui/metapolator/assets/img/favicon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="lib/ui/metapolator/assets/img/favicon/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="lib/ui/metapolator/assets/img/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="lib/ui/metapolator/assets/img/favicon/mstile-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+
+
         <!-- development -->
         <link rel="stylesheet/less" type="text/css" href="lib/ui/metapolator/app.less" />
 
